--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-8 offset-lg-1 p-0 mb-5 m-xxl-5 m-md-3 mb-md-5 mb-lg-3 mx-md-0 overflow-hidden rounded-5 shadow-lg">
-                    <div class="lc-block white-background"><img class="w-100" src="./img/Ivan.png" alt="Photo by Diego PH" width="720px"></div>
+                    <div class="lc-block white-background"><img class="w-100" src="./img/pfp.png" alt="Profile Picture" width="720px"></div>
                 </div>
             </div>
         </div>
