--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <li class="nav-item"><a href="#Presentacion" class="nav-link active" aria-current="page">Presentación</a></li>
                 <li class="nav-item"><a href="#Conocimientos" class="nav-link">Conocimientos</a></li>
                 <li class="nav-item"><a href="#Proyectos" class="nav-link">Proyectos</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">¡Contáctame!</a></li>
+                <li class="nav-item"><a href="#Contacto" class="nav-link">¡Contáctame!</a></li>
               </ul>
             </header>
           
@@ -338,7 +338,7 @@
         </div>
 
 
-        <a name="Proyectos"></a>
+        <a name="Contacto"></a>
         <nav class="navbar navbar-expand-lg navbar-light py-0 bg-light shadow-md mb-0">
             <div class="container-fluid white-background py-4">
                 <div class="navbar-brand mx-auto">
