Changed placeholder pfp to a real one

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" data-bs-theme="light">
     <head>
         <meta charset="UTF-8">
         <title>Portfolio de Enzo Gularte</title>
@@ -44,10 +44,14 @@
                 
             }
 
-              .project-images{
+            .project-images{
                 object-fit: cover;
                 object-position: 100%;
-              }
+            }
+
+            [data-bs-theme=dark] .white-background{
+                background-color: #3D3B40;
+            }
         </style>
     </head>
 
@@ -92,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-8 offset-lg-1 p-0 mb-5 m-xxl-5 m-md-3 mb-md-5 mb-lg-3 mx-md-0 overflow-hidden rounded-5 shadow-lg">
-                    <div class="lc-block white-background"><img class="w-100" src="./img/Ivan.png" alt="Profile Picture" width="720px"></div>
+                    <div class="lc-block white-background"><img class="w-100" src="./img/pfp.png" alt="Profile Picture" width="720px"></div>
                 </div>
             </div>
         </div>
